# easy-slurm

./: .buildinfo  LICENSE  Makefile  README.md  example.py  genindex.html  index.html  job.sh  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  start_job.sh  submit_jobs.py
.github/workflows/: static-gh-pages.yaml
_modules/: index.html
_modules/easy_slurm/: format.html  jobs.html
_sources/: index.rst.txt
_sources/tutorials/: installation.rst.txt
docs/: conf.py  index.rst
docs/easy_slurm/: format.rst  jobs.rst
docs/tutorials/: full.rst
easy_slurm/: __init__.py  format.html  format.py  jobs.html  jobs.py
easy_slurm/run/: submit.py
easy_slurm/templates/: __init__.py  job.sh  job_interactive.sh
examples/simple/: submit_job.py
examples/simple/assets/: config.toml  hparams.yaml
examples/simple/src/: main.py
examples/simple_yaml/: job.yaml  submit_job.py  submit_job.sh
examples/simple_yaml/assets/: hparams.yaml
examples/simple_yaml/src/: main.py  requirements.txt
tutorials/: full.html  installation.html
