[tool.poetry]
name = "easy-slurm"
version = "0.1.0"
description = "Easily manage and submit robust jobs to Slurm using Python and Bash."
authors = ["Mateen Ulhaq <mulhaq2005@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
