[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "easy-slurm"
version = "0.2.1"
description = "Easily manage and submit robust jobs to Slurm using Python and Bash."
authors = ["Mateen Ulhaq <mulhaq2005@gmail.com>"]
license = "MIT"
repository = "https://github.com/YodaEmbedding/easy-slurm"
keywords = ["slurm", "sbatch"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.0"
sphinx-book-theme = "^0.3.3"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
skip_gitignore = true
