[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "easy-slurm"
version = "0.2.3"
description = "Easily manage and submit robust jobs to Slurm using Python and Bash."
authors = ["Mateen Ulhaq <mulhaq2005@gmail.com>"]
license = "MIT"
repository = "https://github.com/YodaEmbedding/easy-slurm"
keywords = ["slurm", "sbatch"]
readme = "README.md"

[tool.poetry.scripts]
easy-slurm = "easy_slurm.run.submit:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.10.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.0"
sphinx-book-theme = "^0.3.3"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
skip_gitignore = true
